# rosa

./: .clang  .clang-format  .clang-tidy  .clangd  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  rosa.puml  vcpkg.json
docs/: Doxyfile.in  di-notes.txt  get lua globals  notes.md  todo.md
examples/: CMakeLists.txt  NSCCameraMovement.hpp  NSCCountdown.hpp  NSCTest.hpp  app.rc  camera_movement.cpp  countdown.cpp  deserialise.cpp  generate_uuids.cpp  serialise.cpp  simple_image.cpp  text_rendering.cpp
examples/assets/: assets.lst  camera_test.lua  countdown.lua  default_fragment.shader  digits.dds  font.bff  light.dds  manifest.yaml  rosa.dds  test.lua
examples/reaction_tester/: RosaTalker.cpp  RosaTalker.hpp  reaction_tester.cpp  rosa_logo.h
include/: ProfilerSections.hpp  TestScript.hpp  rosa.hpp  rosa_pch.hpp
include/audio/: AudioBus.hpp  AudioFile.hpp  AudioManager.hpp  audio.hpp
include/core/: Entity.hpp  Event.hpp  EventManager.hpp  Exception.hpp  GameManager.hpp  Logger.hpp  LuaScript.hpp  NativeScriptEntity.hpp  PhysFSStream.hpp  Resource.hpp  ResourceManager.hpp  ResourceStream.hpp  Scene.hpp  SceneSerialiser.hpp  SerialiserTypes.hpp  Uuid.hpp  core.hpp
include/core/components/: CameraComponent.hpp  LuaScriptComponent.hpp  MusicPlayerComponent.hpp  NativeScriptComponent.hpp  SoundPlayerComponent.hpp  SpriteComponent.hpp  TextComponent.hpp  TransformComponent.hpp
include/core/input/: Keyboard.hpp  Mouse.hpp
include/core/lua_script/: CountdownTimer.hpp  LuaMusic.hpp  LuaSound.hpp  LuaSprite.hpp  LuaTransform.hpp
include/debug/: Profiler.hpp  debug.hpp
include/ecs/: Component.hpp  ComponentArray.hpp  ComponentRegistry.hpp  Entity.hpp  EntityArray.hpp  EntityRegistry.hpp  RegistryView.hpp
include/graphics/: BatchRenderer.hpp  BitmapFont.hpp  Colour.hpp  Drawable.hpp  FrameBuffer.hpp  ImageComparator.hpp  IndexBuffer.hpp  Quad.hpp  Rect.hpp  RenderOverlay.hpp  RenderWindow.hpp  Renderer.hpp  Shader.hpp  ShaderProgram.hpp  Sprite.hpp  Texture.hpp  Vertex.hpp  VertexBuffer.hpp  gl.h  graphics.hpp
luatest/: CMakeLists.txt  luatest.cpp
src/: main.cpp
src/audio/: AudioFile.cpp  AudioManager.cpp
src/core/: Entity.cpp  GameManager.cpp  Logger.cpp  LuaScript.cpp  LuaScriptComponent.cpp  PhysFSStream.cpp  ResourceManager.cpp  Scene.cpp  SceneSerialiser.cpp  SerialiserTypes.cpp  Uuid.cpp
src/core/components/: CameraComponent.cpp  LuaScriptComponent.cpp  MusicPlayerComponent.cpp  NativeScriptComponent.cpp  SoundPlayerComponent.cpp  SpriteComponent.cpp  TextComponent.cpp  TransformComponent.cpp
src/core/lua_script/: CountdownTimer.cpp
src/debug/: Profiler.cpp
src/ecs/: Entity.cpp
src/folder/: Profiler.cpp
src/graphics/: BatchRenderer.cpp  BitmapFont.cpp  Colour.cpp  Drawable.cpp  FrameBuffer.cpp  ImageComparator.cpp  RenderOverlay.cpp  RenderWindow.cpp  Renderer.cpp  Shader.cpp  ShaderProgram.cpp  Sprite.cpp  Texture.cpp
testbed/: CMakeLists.txt  MyScene.cpp  MyScene.hpp  TestScript.hpp  main.cpp
testbed/assets/: assets.lst  test.dds  test.lua
tests/: CMakeLists.txt  NSCColour.hpp  NSCRotate.hpp  NSCTest.hpp  coloured_image.cpp  display_image.cpp  emptydds.pak  lua_coloured_image.cpp  lua_rotating_image.cpp  msaa.cpp  nomanifest.pak  notadds.pak  resource-manager.cpp  rotating_image.cpp  scene.cpp  serialise.cpp  texture_filtering.cpp  uuid.cpp
tests/packs/: emptydds.pak  missingfile.pak  notadds.pak
tests/references/assets/: assets.lst  colour.lua  default_vertex.shader  manifest.yaml  rotate.lua  serialise_test.lua  test.dds
